styled wrapper to prevent overflow on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+.wrapper {
+    overflow-x: hidden;
+    position: relative;
+}
+
 /*----navbar---*/
 
 .navalert-container {
